--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "mac": "react-native run-macos",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
@@ -18,6 +19,8 @@
     "@react-navigation/stack": "^6.0.9",
     "@types/axios": "^0.14.0",
     "axios": "^0.23.0",
+    "mobx": "^6.3.8",
+    "mobx-react-lite": "^3.2.2",
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-chart-kit": "^6.11.0",
