--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.23.0",
     "mobx": "^6.3.8",
     "mobx-react-lite": "^3.2.2",
+    "postcss": "^8.4.4",
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-chart-kit": "^6.11.0",
@@ -31,7 +32,9 @@
     "react-native-screens": "^3.7.2",
     "react-native-svg": "^11.*",
     "react-native-vector-icons": "^8.1.0",
-    "react-query": "^3.25.0"
+    "react-query": "^3.25.0",
+    "tailwind-rn": "^3.0.1",
+    "tailwindcss": "^2.2.19"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
