--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-screens": "^3.9.0",
     "react-native-svg": "^11.*",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-webview": "^9.1.2",
     "react-query": "^3.25.0",
     "tailwind-rn": "^3.0.1",
     "tailwindcss": "^2.2.19"
